--- a/debian/logrotate.conf
+++ b/debian/logrotate.conf
@@ -1,8 +1,9 @@
 /var/log/sniproxy/*.log {
-    daily
+    hourly
     copytruncate
+    maxsize 100M
     missingok
-    rotate 90
+    rotate 3
     compress
     notifempty
     create 640 daemon adm
